Add path aliases for better module imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,13 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    "baseUrl": "./",
+    "paths": {
+      "@Interfaces/*": ["src/app/interfaces/*"],
+      "@Components/*": ["src/app/components/index.ts"],
+      "@Pages/*": ["src/app/pages/*"],
+      "@Services/*": ["src/app/services/*"]
+    },
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
